kubernetes/apps/home-automation/emqx/cluster/loadbalancer.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: emqx
  namespace: home-automation
  labels:
    apps.emqx.io/db-role: core
    apps.emqx.io/instance: emqx
  annotations:
    io.cilium/lb-ipam-ips: "${LB_EMQX}"
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 1883
  selector:
    apps.emqx.io/db-role: core
    apps.emqx.io/instance: emqx
